--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^1.7.18",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.7.2",
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
+    "firebase": "^10.10.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
-    "redux-toolkit": "^1.1.2"
+    "recharts": "^2.12.0",
+    "redux-toolkit": "^1.1.2",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
