--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.24.0",
     "recharts": "^2.12.0",
     "redux-toolkit": "^1.1.2",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.0"
   },
   "devDependencies": {
